# raye-network-table

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  README.md  out.txt  package.xml
Jenkins/: Jenkinsfile
install_deps/: install_deps_linux.sh  install_deps_osx.sh
jenkins/: can_bbb_nuc_integration.jenkinsfile  datapath_test.jenkinsfile
lib/: core_libs.cmake
projects/: CMakeLists.txt  README.md
projects/bbb_ais_listener/: CMakeLists.txt  README.md  main.cpp  test.cpp
projects/bbb_canbus_listener/: CMakeLists.txt  README.md  main.cpp
projects/bbb_canbus_listener/bms_pwr_mgr/: CMakeLists.txt  bms_pwr_mgr.cpp  bms_pwr_mgr.h  test_bms_pwr_mgr.cpp
projects/bbb_eth_listener/: CMakeLists.txt  main.cpp
projects/bbb_rockblock_listener/: CMakeLists.txt  README.md  main.cpp
projects/bbb_satellite_listener/: CMakeLists.txt  README.md  main.cpp
projects/bbb_uccm_command_interface/: CMakeLists.txt  README.md  main.cpp
projects/client/: CMakeLists.txt  main.cpp
projects/dummy-satellite/: CMakeLists.txt  main.cpp
projects/example/: main.cpp
projects/init_gps_coords/: CMakeLists.txt  main.cpp
projects/integration-test/: main.py
projects/land_satellite_listener/: .gitignore  CMakeLists.txt  README.md  current_error.txt  land_satellite_listener.py  sensorBinaryData.txt  test_POST_payload.py  uccmBinaryData.txt
projects/light-client/: CMakeLists.txt  main.cpp
projects/light_client/: CMakeLists.txt  main.cpp
projects/log_client/: CMakeLists.txt  main.cpp
projects/logger_test/: CMakeLists.txt  main.cpp
projects/network-table/: CMakeLists.txt  main.cpp  network-table.cpp  network-table.h
projects/network-table-client/: CMakeLists.txt  main.cpp
projects/network-table-server/: CMakeLists.txt  main.cpp
projects/network_table_listener/: NetworkTableListener.py  generated_python  nt_connection
projects/network_table_server/: CMakeLists.txt  main.cpp
projects/nuc_eth_listener/: CMakeLists.txt  README.md  main.cpp
projects/nuc_manual_override/: CMakeLists.txt  README.md  main.cpp
projects/nuc_manual_test_rudder/: main.cpp
projects/nuc_to_bbb/: CMakeLists.txt  main.cpp
projects/nuc_to_bbb/msg/: actuation_angle.msg
projects/read-wind-sensor-canbus/: .main.cpp.swo  .main.cpp.swp  CMakeLists.txt  main.cpp
projects/rockblock/: CMakeLists.txt  main.cpp
projects/sensors-CANBUS/: CMakeLists.txt  main.cpp
projects/server/: CMakeLists.txt
projects/simulator/: CMakeLists.txt  main.cpp
projects/simulator/msg/: Sensors.msg
projects/stress_client/: CMakeLists.txt  main.cpp
projects/utilities/example_utility/: CMakeLists.txt  main.cpp
projects/viewtree/: CMakeLists.txt  main.cpp
projects/webapp_listener/: WebSocketConnection.py
scripts/: canbus_data_checker.py  cansend_to_nt.py  config_bbb_pins.sh  generated_python  install_protobuf.sh  integration_test.py  mock_power_data.py  mock_sensors.py  mock_waypoint_data.py  network_table_stress_test.py  networktable_integration_test.py  nt_connection  record_sensors.py  record_time_series_table.py  run_cppcheck.sh  run_cpplint.sh  run_pythonlint.sh
scripts/can_logging/: README.md  log_can.sh  test_printer.py
scripts/ctrl_data_logging/: ctrl_data_logging.sh
scripts/recorded_data/: mock_can_data.csv  mock_canbus_data.csv  sample_time_series_table.csv
scripts/startup/: bbb_startup.sh  land_startup.sh  nuc_startup.sh
scripts/startup/helpers/: global_pathfinding_startup.sh  local_pathfinding_startup.sh  mock_ais_startup.sh  mock_sensors_startup.sh
scripts/static_analysis/: cpplint.py  run_cppcheck.sh  run_cpplint.sh  run_pythonlint.sh
scripts/supervisor_conf/: README.md  bbb.conf  land.conf  nuc.conf
scripts/systemd_conf/: README.md
scripts/systemd_conf/bbb_services/: ais_listener.service  aisd.service  can_logger.service  canbus_listener.service  config_pins.service  eth_listener.service  nt_server.service  (+1 more)
scripts/terminate/: bbb_terminate.sh  land_terminate.sh  nuc_terminate.sh
scripts/utility/: cleanup.sh  config_pins.sh  generate_frameID_json.py  install_protobuf.sh  setup_vcan.sh
src/: .Connection.h.swp  CMakeLists.txt  Connection.cpp  Connection.h  Exceptions.h  Help.cpp  Help.h  Logger.cpp  Logger.h  NonProtoConnection.cpp  NonProtoConnection.h  Server.cpp  Server.h  Tree.cpp  Tree.h  Uri.h  frame_parser.h
src/example/: Example.h
src/network-table/: Connection.cpp  Connection.h  NetworkTableConnection.cpp  NetworkTableConnection.h  NetworkTableServer.cpp  NetworkTableServer.h  Server.cpp  Server.h  network-table.cpp  network-table.h
src/network-table/protofiles/: GetKeyAction.proto  GetValueAction.proto  GetValueReply.proto  GetValueRequest.proto  GetValuesReply.proto  GetValuesRequest.proto  Message.proto  Reply.proto  Request.proto  SetKeyAction.proto  SetValueAction.proto  SetValueRequest.proto  SetValuesRequest.proto  SubscribeReply.proto  SubscribeRequest.proto  UnsubscribeRequest.proto  Value.proto
src/protofiles/: ActuationAngle.proto  ErrorReply.proto  GetNodesReply.proto  GetNodesRequest.proto  GetValuesReply.proto  GetValuesRequest.proto  KeyValuePair.proto  Node.proto  Nt.proto  Reply.proto  Request.proto  Satellite.proto  Sensors.proto  SetValuesRequest.proto  SubscribeReply.proto  SubscribeRequest.proto  Uccms.proto  UnsubscribeRequest.proto  Value.proto
src/python/: .gitignore  CAN_to_URI_to_ROStopic.py  CMakeLists.txt  Connection.py  Help.py  SSH_Connection.py  frame_parser.py  rostopic.py  serial_api.py  uri.py
test/: CMakeLists.txt
test/basic_tests/: CMakeLists.txt  HelpTest.cpp  HelpTest.h  TreeTest.cpp  TreeTest.h
test/basic_tests/example/: ExampleTest.cpp  ExampleTest.h
test/bbb_eth_listener_test/: CMakeLists.txt  main.cpp
test/datapath_tests/: BBB_LANDSERVER_dp_test.py  CAN_BBB_LAND_dp_test.py  CAN_BBB_NUC_dp_test.py  LANDSERVER_BBB_dp_test.py  connection_values.py  dummy_data.py  mock_waypoint_data.py  poll_network_table_data.py
test/mock_gps_tests/: CMakeLists.txt  MockGPSNucTest.cpp  main.cpp
test/mock_gps_tests/bbb_eth_listener_test/: README.md
test/mock_gps_tests/nuc_eth_listener_test/: CMakeLists.txt
(+8 files in other folders)
