<?xml version="1.0"?>
<package format="2">
  <name>network-table</name>
  <version>0.0.0</version>
  <description>The network-table package</description>

  <maintainer email="software@ubcsailbot.org">ubcsailbot</maintainer>

  <license>MIT</license>

  <build_depend>sailbot_msg</build_depend>
  <exec_depend>sailbot_msg</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
