add_subdirectory(bbb_canbus_listener)
add_subdirectory(bbb_eth_listener)
add_subdirectory(bbb_satellite_listener)
add_subdirectory(bbb_ais_listener)
add_subdirectory(stress_client)
add_subdirectory(light_client)
add_subdirectory(client)
add_subdirectory(init_gps_coords)
add_subdirectory(network_table_server)
add_subdirectory(viewtree)
if(ENABLE_ROS)
add_subdirectory(nuc_manual_override)
add_subdirectory(nuc_eth_listener)
endif()
